# SDL3RAYRT

./: .clang-tidy  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md
.github/: constants.env
.github/workflows/: ci.yml  codeql-analysis.yml
cmake/: CPM.cmake  Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  SystemLink.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/SDL3RAYRT/: FileReaderError.hpp  headers.hpp  sample_library.hpp  sdl3rayrt.hpp
include/SDL3RAYRT/timer/: Timer.hpp
include/sdl3rayrt_core_lib/: FileReader.hpp  Log.hpp  glm_matld.hpp  headers.hpp
include/sdl3rayrt_core_lib/timer/: Timer.hpp  TimerConstats.hpp  Times.hpp
include/sdl3rayrt_lib/: CApp.hpp  FPSCounter.hpp  headers.hpp  sdl3rayrt.hpp
include/sdl3rayrt_lib/rayTrace/: Camera.hpp  GTform.hpp  Image.hpp  LightBase.hpp  ObjPlane.cpp  ObjPlane.hpp  ObjectBase.hpp  PointLight.hpp  Ray.hpp  Scene.hpp
include/sdl3rayrt_lib/rayTrace/Light/: LightBase.hpp  PointLight.hpp
include/sdl3rayrt_lib/rayTrace/Primatives/: ObjPlane.hpp  ObjSphere.hpp  ObjectBase.hpp
src/: CMakeLists.txt
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
src/sdl3rayrt/: CMakeLists.txt  main.cpp
src/sdl3rayrt_core_lib/: CMakeLists.txt  sdl3rayrt_core.cpp
src/sdl3rayrt_lib/: CApp.cpp  CMakeLists.txt  FPSCounter.cpp  sdl3rayrt.cpp
src/sdl3rayrt_lib/rayTrace/: Camera.cpp  GTform.cpp  Image.cpp  LightBase.cpp  ObjSphere.cpp  ObjectBase.cpp  PointLight.cpp  Ray.cpp  Scene.cpp
src/sdl3rayrt_lib/rayTrace/Light/: LightBase.cpp  PointLight.cpp
src/sdl3rayrt_lib/rayTrace/Primatives/: ObjPlane.cpp  ObjSphere.cpp  ObjectBase.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp  testsConstanst.hpp
